src/antlr/WebTemplateParser.java
// Generated from C:/Users/DELL/Desktop/Compiler2025-Team27/src/antlr/WebTemplateParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class WebTemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, HTML_COMMENT=2, JINJA_COMMENT_START=3, JINJA_EXPR_START=4, 
		JINJA_STMT_START=5, STYLE_OPEN=6, HTML_CLOSE_TAG=7, HTML_OPEN_TAG_START=8, 
		HTML_TEXT=9, VOID_TAG_NAME=10, TAG_OPEN_WS=11, TAG_NAME=12, TAG_WS=13, 
		TAG_ATTR_NAME=14, TAG_EQ=15, TAG_SELF_CLOSE=16, TAG_END=17, ATTR_VALUE_DOUBLE=18, 
		ATTR_VALUE_SINGLE=19, ATTR_VALUE_UNQUOTED=20, STYLE_WS=21, STYLE_ATTR_NAME=22, 
		STYLE_EQ=23, STYLE_TAG_END=24, STYLE_SELF_CLOSE=25, CSS_CLOSE=26, CSS_WS=27, 
		CSS_COMMENT=28, CSS_LBRACE=29, CSS_RBRACE=30, CSS_LPAREN=31, CSS_RPAREN=32, 
		CSS_COLON=33, CSS_SEMI=34, CSS_COMMA=35, CSS_DOT=36, CSS_TILDE=37, CSS_PLUS=38, 
		CSS_STAR=39, CSS_SLASH=40, CSS_BANG=41, CSS_LBRACKET=42, CSS_RBRACKET=43, 
		CSS_GT=44, CSS_LT=45, CSS_EQ=46, CSS_HEX_COLOR=47, CSS_HASH_IDENT=48, 
		CSS_AT_RULE=49, CSS_NUMBER=50, CSS_PERCENTAGE=51, CSS_DIMENSION=52, CSS_STRING=53, 
		CSS_URL=54, CSS_IDENT=55, JINJA_COMMENT_END=56, JINJA_COMMENT_TEXT=57, 
		JINJA_EXPR_END=58, JINJA_WS=59, JINJA_NOT=60, JINJA_AND=61, JINJA_OR=62, 
		JINJA_IN=63, JINJA_IS=64, JINJA_NUMBER=65, JINJA_STRING=66, JINJA_IDENTIFIER=67, 
		JINJA_ASSIGNMENT=68, JINJA_PIPE=69, JINJA_DOT=70, JINJA_LPAREN=71, JINJA_RPAREN=72, 
		JINJA_COMMA=73, JINJA_LBRACKET=74, JINJA_RBRACKET=75, JINJA_COMPARISON=76, 
		JINJA_ADDITIVE=77, JINJA_MULTIPLICATIVE=78, JSTMT_END=79, JSTMT_WS=80, 
		JSTMT_IF=81, JSTMT_ELIF=82, JSTMT_ELSE=83, JSTMT_FOR=84, JSTMT_IN=85, 
		JSTMT_IS=86, JSTMT_ENDIF=87, JSTMT_ENDFOR=88, JSTMT_BLOCK=89, JSTMT_ENDBLOCK=90, 
		JSTMT_SET=91, JSTMT_NOT=92, JSTMT_AND=93, JSTMT_OR=94, JSTMT_IDENTIFIER=95, 
		JSTMT_NUMBER=96, JSTMT_STRING=97, JSTMT_PIPE=98, JSTMT_DOT=99, JSTMT_COMMA=100, 
		JSTMT_LPAREN=101, JSTMT_RPAREN=102, JSTMT_LBRACKET=103, JSTMT_RBRACKET=104, 
		JSTMT_COMPARISON=105, JSTMT_ASSIGNMENT=106, JSTMT_ADDITIVE=107, JSTMT_MULTIPLICATIVE=108;
	public static final int
		RULE_document = 0, RULE_element = 1, RULE_htmlElement = 2, RULE_htmlVoidTag = 3, 
		RULE_htmlOpenTag = 4, RULE_htmlSelfCloseTag = 5, RULE_htmlCloseTag = 6, 
		RULE_tagAttribute = 7, RULE_attrValue = 8, RULE_cssBlock = 9, RULE_styleAttribute = 10, 
		RULE_cssRule = 11, RULE_mediaRule = 12, RULE_mediaCondition = 13, RULE_mediaConditionPart = 14, 
		RULE_selector = 15, RULE_selectorItem = 16, RULE_compoundSelector = 17, 
		RULE_simpleSelector = 18, RULE_declaration = 19, RULE_cssValue = 20, RULE_jinjaBlock = 21, 
		RULE_jinjaIf = 22, RULE_jinjaElif = 23, RULE_jinjaElse = 24, RULE_jinjaFor = 25, 
		RULE_forTargetList = 26, RULE_jinjaSet = 27, RULE_jinjaBlockStmt = 28, 
		RULE_jinjaExpr = 29, RULE_jinjaComment = 30, RULE_expr = 31, RULE_orExpr = 32, 
		RULE_andExpr = 33, RULE_notExpr = 34, RULE_comparisonExpr = 35, RULE_comparisonOp = 36, 
		RULE_additiveExpr = 37, RULE_multiplicativeExpr = 38, RULE_unaryExpr = 39, 
		RULE_postfixExpr = 40, RULE_atom = 41, RULE_postfixSuffix = 42, RULE_argument = 43, 
		RULE_exprList = 44, RULE_textNode = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "element", "htmlElement", "htmlVoidTag", "htmlOpenTag", "htmlSelfCloseTag", 
			"htmlCloseTag", "tagAttribute", "attrValue", "cssBlock", "styleAttribute", 
			"cssRule", "mediaRule", "mediaCondition", "mediaConditionPart", "selector", 
			"selectorItem", "compoundSelector", "simpleSelector", "declaration", 
			"cssValue", "jinjaBlock", "jinjaIf", "jinjaElif", "jinjaElse", "jinjaFor", 
			"forTargetList", "jinjaSet", "jinjaBlockStmt", "jinjaExpr", "jinjaComment", 
			"expr", "orExpr", "andExpr", "notExpr", "comparisonExpr", "comparisonOp", 
			"additiveExpr", "multiplicativeExpr", "unaryExpr", "postfixExpr", "atom", 
			"postfixSuffix", "argument", "exprList", "textNode"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'{#'", "'{{'", "'{%'", "'<style'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'{'", "'}'", null, null, "':'", 
			"';'", null, null, "'~'", "'+'", "'*'", "'/'", "'!'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'#}'", 
			null, "'}}'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'%}'", null, 
			"'if'", "'elif'", "'else'", "'for'", null, null, "'endif'", "'endfor'", 
			"'block'", "'endblock'", "'set'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "HTML_COMMENT", "JINJA_COMMENT_START", "JINJA_EXPR_START", 
			"JINJA_STMT_START", "STYLE_OPEN", "HTML_CLOSE_TAG", "HTML_OPEN_TAG_START", 
			"HTML_TEXT", "VOID_TAG_NAME", "TAG_OPEN_WS", "TAG_NAME", "TAG_WS", "TAG_ATTR_NAME", 
			"TAG_EQ", "TAG_SELF_CLOSE", "TAG_END", "ATTR_VALUE_DOUBLE", "ATTR_VALUE_SINGLE", 
			"ATTR_VALUE_UNQUOTED", "STYLE_WS", "STYLE_ATTR_NAME", "STYLE_EQ", "STYLE_TAG_END", 
			"STYLE_SELF_CLOSE", "CSS_CLOSE", "CSS_WS", "CSS_COMMENT", "CSS_LBRACE", 
			"CSS_RBRACE", "CSS_LPAREN", "CSS_RPAREN", "CSS_COLON", "CSS_SEMI", "CSS_COMMA", 
			"CSS_DOT", "CSS_TILDE", "CSS_PLUS", "CSS_STAR", "CSS_SLASH", "CSS_BANG", 
			"CSS_LBRACKET", "CSS_RBRACKET", "CSS_GT", "CSS_LT", "CSS_EQ", "CSS_HEX_COLOR", 
			"CSS_HASH_IDENT", "CSS_AT_RULE", "CSS_NUMBER", "CSS_PERCENTAGE", "CSS_DIMENSION", 
			"CSS_STRING", "CSS_URL", "CSS_IDENT", "JINJA_COMMENT_END", "JINJA_COMMENT_TEXT", 
			"JINJA_EXPR_END", "JINJA_WS", "JINJA_NOT", "JINJA_AND", "JINJA_OR", "JINJA_IN", 
			"JINJA_IS", "JINJA_NUMBER", "JINJA_STRING", "JINJA_IDENTIFIER", "JINJA_ASSIGNMENT", 
			"JINJA_PIPE", "JINJA_DOT", "JINJA_LPAREN", "JINJA_RPAREN", "JINJA_COMMA", 
			"JINJA_LBRACKET", "JINJA_RBRACKET", "JINJA_COMPARISON", "JINJA_ADDITIVE", 
			"JINJA_MULTIPLICATIVE", "JSTMT_END", "JSTMT_WS", "JSTMT_IF", "JSTMT_ELIF", 
			"JSTMT_ELSE", "JSTMT_FOR", "JSTMT_IN", "JSTMT_IS", "JSTMT_ENDIF", "JSTMT_ENDFOR", 
			"JSTMT_BLOCK", "JSTMT_ENDBLOCK", "JSTMT_SET", "JSTMT_NOT", "JSTMT_AND", 
			"JSTMT_OR", "JSTMT_IDENTIFIER", "JSTMT_NUMBER", "JSTMT_STRING", "JSTMT_PIPE", 
			"JSTMT_DOT", "JSTMT_COMMA", "JSTMT_LPAREN", "JSTMT_RPAREN", "JSTMT_LBRACKET", 
			"JSTMT_RBRACKET", "JSTMT_COMPARISON", "JSTMT_ASSIGNMENT", "JSTMT_ADDITIVE", 
			"JSTMT_MULTIPLICATIVE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebTemplateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
	 
		public DocumentContext() { }
		public void copyFrom(DocumentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DocumentRootContext extends DocumentContext {
		public TerminalNode EOF() { return getToken(WebTemplateParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public DocumentRootContext(DocumentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterDocumentRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitDocumentRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitDocumentRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			_localctx = new DocumentRootContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 888L) != 0)) {
				{
				{
				setState(92);
				element();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	 
		public ElementContext() { }
		public void copyFrom(ElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElementCssContext extends ElementContext {
		public CssBlockContext cssBlock() {
			return getRuleContext(CssBlockContext.class,0);
		}
		public ElementCssContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterElementCss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitElementCss(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitElementCss(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElementHtmlContext extends ElementContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public ElementHtmlContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterElementHtml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitElementHtml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitElementHtml(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElementTextContext extends ElementContext {
		public TextNodeContext textNode() {
			return getRuleContext(TextNodeContext.class,0);
		}
		public ElementTextContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterElementText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitElementText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitElementText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ElementJinjaContext extends ElementContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public ElementJinjaContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterElementJinja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitElementJinja(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitElementJinja(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTML_OPEN_TAG_START:
				_localctx = new ElementHtmlContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				htmlElement();
				}
				break;
			case STYLE_OPEN:
				_localctx = new ElementCssContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				cssBlock();
				}
				break;
			case JINJA_COMMENT_START:
			case JINJA_EXPR_START:
			case JINJA_STMT_START:
				_localctx = new ElementJinjaContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				jinjaBlock();
				}
				break;
			case HTML_TEXT:
				_localctx = new ElementTextContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				textNode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContainerContext extends HtmlElementContext {
		public HtmlOpenTagContext htmlOpenTag() {
			return getRuleContext(HtmlOpenTagContext.class,0);
		}
		public HtmlCloseTagContext htmlCloseTag() {
			return getRuleContext(HtmlCloseTagContext.class,0);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public HtmlElementContainerContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterHtmlElementContainer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitHtmlElementContainer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitHtmlElementContainer(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementVoidContext extends HtmlElementContext {
		public HtmlVoidTagContext htmlVoidTag() {
			return getRuleContext(HtmlVoidTagContext.class,0);
		}
		public HtmlElementVoidContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterHtmlElementVoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitHtmlElementVoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitHtmlElementVoid(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementSelfClosingContext extends HtmlElementContext {
		public HtmlSelfCloseTagContext htmlSelfCloseTag() {
			return getRuleContext(HtmlSelfCloseTagContext.class,0);
		}
		public HtmlElementSelfClosingContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).enterHtmlElementSelfClosing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebTemplateParserListener ) ((WebTemplateParserListener)listener).exitHtmlElementSelfClosing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebTemplateParserVisitor ) return ((WebTemplateParserVisitor<? extends T>)visitor).visitHtmlElementSelfClosing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new HtmlElementVoidContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				htmlVoidTag();
				}
				break;
			case 2:
				_localctx = new HtmlElementContainerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				htmlOpenTag();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 888L) != 0)) {
					{
					{
					setState(108);
					element();
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(114);
				htmlCloseTag();
				}
				break;
			case 3:
				_localctx = new HtmlElementSelfClosingContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				htmlSelfCloseTag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
